# numba-linking

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: numba_linking_ci.yml  release.yml  versioning.yml
numba_linking/: Makefile  bind_jit.py  calc.ll  make_cfunc.py  make_jit.py  make_llvm.py
test/: aux_structrefs.py  test_bind_jit.py  test_nested_jit.py
