[build-system]
requires = ["setuptools~=75.3.0", "wheel~=0.43.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["numba_linking"]

[project]
name = "numba_linking"
dynamic = ["version"]
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["llvmlite", "numba", "numpy"]
authors = [
  {name = "Mikhail Goykhman"}
]
readme = 'README.md'

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "numba_linking.__version__"}
